# tamil-font-converter-rs

./: .gitignore  Cargo.toml  index.html
pkg/: package.json  pkg  tamil_font_converter_rs.d.ts  tamil_font_converter_rs.js  tamil_font_converter_rs_bg.d.ts  tamil_font_converter_rs_bg.wasm
src/: lib.rs
