[package]
name = "tamil-font-converter-rs"
version = "0.1.0"
authors = ["SWAMINATHAN Gurukandhamoorthi <ds.gurukandhamoorthi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.1"
wasm-bindgen = "0.2.60"
gloo = "0.2.1"

[lib]
crate-type = [ "cdylib" ]

[dependencies.web-sys]
version = "0.3.37"
features = [
    "CssStyleDeclaration",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlButtonElement",
    "HtmlDivElement",
    "HtmlParagraphElement",
    "Node",
    "Window",
    "console",
]
